Change behavior when pressing enter key
Add change prohibition setting
Add re-indenting

--- a/monaco/index.html
+++ b/monaco/index.html
@@ -57,6 +57,11 @@
             <div id="control-subArea" class="">
                 <div class="alignLine"></div>
                 <div>
+                    <input type="checkbox" class="displayHide" id="control-extraReadOnly"></input>
+                    <label for="control-extraReadOnly" class="control-iconButton"><img class="refSize"
+                            src="./icon/edit.svg"></label>
+                </div>
+                <div>
                     <input type="checkbox" class="displayHide" id="control-extraInsertText" checked></input>
                     <label for="control-extraInsertText" class="control-iconButton"><img class="refSize"
                             src="./icon/cursor-text.svg"></label>
@@ -76,6 +81,9 @@
                         src="./icon/palette.svg"></span>
                 <span id="control-extraTerminal" class="control-iconButton hoverButton"><img class="refSize"
                         src="./icon/terminal-2.svg"></span>
+                <div class="alignLine"></div>
+                <span id="control-extraLinkFile" class="control-iconButton hoverButton"><img class="refSize"
+                        src="./icon/file-symlink.svg"></span>
                 <span></span>
                 <div>
                     <input type="checkbox" class="displayHide" id="control-extraRef"></input>
