--- a/monaco/index.html
+++ b/monaco/index.html
@@ -1,5 +1,5 @@
 <html>
-
+    <!--meta name="color-scheme" content="light dark" /-->
 <head>
     <title>DAM(Monaco)</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
