--- a/monaco/index.html
+++ b/monaco/index.html
@@ -1,9 +1,8 @@
 <html>
-    <!--meta name="color-scheme" content="light dark" /-->
 <head>
     <title>DAM(Monaco)</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <script src="https://cdn.jsdelivr.net/npm/idb-keyval@6/dist/umd.js"></script>
+    <script src="./idb-keyval.js"></script>
     <script src="./lang.js"></script>
     <script src="./monaco-lang.js"></script>
     <script src="./lang2.js"></script>
