--- a/monaco/index.html
+++ b/monaco/index.html
@@ -7,6 +7,7 @@
     <script src="./lang.js"></script>
     <script src="./monaco-lang.js"></script>
     <script src="./lang2.js"></script>
+    <script src="./lang3.js"></script>
     <script src="./theme.js"></script>
     <script src="./lib/min/vs/loader.js"></script>
     <script src="./monaco.js"></script>
