--- a/monaco/index.html
+++ b/monaco/index.html
@@ -3,11 +3,14 @@
 <head>
     <title>DAM(Monaco)</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-
     <link rel="stylesheet" href="./monaco.css" />
 </head>
 
 <body>
+    <dialog open id="loadingPopUp">
+        <p>Loading Editor...</p>
+        <div class="loader"></div>
+    </dialog>
     <header>
         <div class="editorModeArea">
             <div>
