Works even on lower versions of browsers

--- a/monaco/index.html
+++ b/monaco/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="alignLine"></div>
         </div>
-        
+
         <div style="display:flex; width: 100%;position:relative;overflow: hidden;">
             <div class="control-FolderFileArea">
                 <span></span>
@@ -83,8 +83,9 @@
                 </div>
                 <span id="control-extraTheme" class="control-iconButton hoverButton"><img class="refSize"
                         src="./icon/palette.svg"></span>
-                <span id="control-extraTerminal" class="control-iconButton hoverButton"><img class="refSize"
-                        src="./icon/terminal-2.svg"></span>
+                <input type="checkbox" class="displayHide" id="control-initRead"></input>
+                <label for="control-initRead" class="control-iconButton"><img class="refSize"
+                        src="./icon/terminal-2.svg"></label>
                 <div class="alignLine"></div>
                 <span id="control-extraLinkFile" class="control-iconButton hoverButton"><img class="refSize"
                         src="./icon/file-symlink.svg"></span>
