--- a/monaco/index.html
+++ b/monaco/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <meta name="theme-color" content="#2D2D2D" />
+
 <head>
     <title>DAM(Monaco)</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8;color-scheme=dark;" />
     <link rel="stylesheet" href="./monaco.css" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="./manifest.json" crossorigin="use-credentials" />
+    <link rel="icon" type="image/png" href="./images/icons/icon-128x128.png">
 </head>
 
 <body>
