Added indent display mode for DiffEditor

--- a/monaco/index.html
+++ b/monaco/index.html
@@ -63,6 +63,17 @@
                     class="control-FileFolder-pulldown"></select>
                 <select name="control-File-Right" id="control-File-Right" class="control-FileFolder-pulldown"></select>
             </div>
+            <div style="width: 10%;display: flex;">
+                <div style="margin: 0 0.3rem">
+                    <span id="control-FileSelectSync" class="control-iconButton hoverButton"><img class="refSize"
+                            src="./icon/link.svg"></span>
+                </div>
+                <div style="margin: 0 0.3rem" id="control-diffArea">
+                    <input type="checkbox" class="displayHide" id="control-diffExtension"></input>
+                    <label for="control-diffExtension" class="control-iconButton"><img class="refSize"
+                            src="./icon/extension.svg"></label>>
+                </div>
+            </div>
             <div id="control-subArea" class="">
                 <div class="alignLine"></div>
                 <div>
@@ -76,14 +87,13 @@
                             src="./icon/cursor-text.svg"></label>
                 </div>
                 <div>
-                    <input type="checkbox" class="displayHide" id="control-extraRuler"></input>
+                    <input type="checkbox" class="displayHide" id="control-extraRuler" checked></input>
                     <label for="control-extraRuler" class="control-iconButton"><img class="refSize"
                             src="./icon/ruler-2.svg"></label>
                 </div>
                 <div class="alignLine"></div>
                 <div style="margin: 0 0.3rem">
-                    <span id="control-FileSelectSync" class="control-iconButton hoverButton"><img class="refSize"
-                            src="./icon/link.svg"></span>
+                    
                 </div>
                 <span id="control-extraTheme" class="control-iconButton hoverButton"><img class="refSize"
                         src="./icon/palette.svg"></span>
